--- a/styles/style.css
+++ b/styles/style.css
@@ -105,11 +105,15 @@ main{
     max-width: 1140px;
     margin: 0 auto;
 }
+main section{
+    margin-top: 130px;
+    margin-bottom: 130px;
+}
 .about{
     border-radius: 10px;
     padding: 130px 150px;
     text-align: center;
-    margin-top: 130px;
+   
 
 }
 .ab-descrip{
@@ -126,4 +130,18 @@ main{
 .about-items{
     display: flex;
     justify-content: space-around;
+}
+
+.center{
+    text-align: center;
+}
+
+.container{
+    display: flex;
+    gap:24px
+}
+.skill{
+    padding: 33px ;
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 }
