--- a/styles/style.css
+++ b/styles/style.css
@@ -144,4 +144,41 @@ main section{
     padding: 33px ;
     border-radius: 5px;
     box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+    margin-top: 50px;
+}
+
+.space{
+    margin-left: 156px;
+    margin-right: 156px;
+}
+.res-cont{
+    display: flex;
+    gap: 25px;
+}
+
+.res-title{
+    font-size: 30px;
+    color: #474747;
+    margin-bottom: 30px;
+}
+.exp-title{
+    font-size: 25px;
+    color: #474747;
+    margin-bottom: 10px;
+}
+.exp-sub-title{
+    font-size: 20px;
+    color: #757575;
+    margin-top: 20px;
+}
+.line{
+    margin-top: 30px;
+}
+.exp-desc{
+    font-size: 16px;
+    color: #757575;
+    margin-bottom: 30px;
+}
+.cv {
+    margin-top: 20px;
 }
