--- a/styles/style.css
+++ b/styles/style.css
@@ -209,9 +209,23 @@ footer textarea{
     border-radius: 5px;
     background-color: white;
     display: block;
-    font-size: 16;
-    padding: 10px 20px;
+    font-size: 16px;
+    padding: 20px 30px;
     margin-bottom: 25px;
     border: none;
 
 }
+
+.btnc{
+    background-color: #FFF8F3;
+    font-weight: bold;
+    
+    border-color: #FD6E0A;
+    padding: 18px 35px;
+    border-radius: 5px;
+    font-size: 20px;
+    color:#FD6E0A;
+    margin-left: 30px;
+
+}
+
