--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,9 @@
  /* <uniquifier>: Use a unique and descriptive class name
  <weight>: Use a value from 300 to 800 */
-
+/* *{
+    margin: 0;
+    padding: 0;
+} */
 .open-sans-normal {
   font-family: "Open Sans", serif;
   font-optical-sizing: auto;
@@ -14,7 +17,7 @@ nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 50px 200px;
+    margin: 0px 200px;
 }
 /* shared style */
 .text-color{
@@ -60,16 +63,19 @@ nav ul{
     background-image: url('../images/developer.png'), url('../images/header_bg.png');
     background-repeat: no-repeat;
     background-position: top left, bottom right;
+    /* padding: 50px 0px; */
+    padding-top: 50px;
 }
 .banner{
     display: flex;
     justify-content: space-between;
-    margin: 0 38px 0 230px;
+    margin: 0 35px 0 200px;
 }
 
 .ban-content{
-    max-width: 585px;
-}
+    /* max-width: 585px; */
+    margin-top: 100px;
+} 
 
 .text1{
     font-size: 45px;
@@ -89,6 +95,7 @@ nav ul{
 }
 .pro-pic{
     width: 580px;
+
 }
 
 .title{
@@ -214,7 +221,7 @@ footer textarea{
     background-color: white;
     display: block;
     font-size: 16px;
-    padding: 20px 30px;
+    padding: 20px 20px;
     margin-bottom: 25px;
     border: none;
 
